--- a/src/components/WorshipTimes/style.css
+++ b/src/components/WorshipTimes/style.css
@@ -2,6 +2,11 @@
     text-align: center;
     margin-bottom: 50px;
   }
+
+  .worship-section {
+    background-color: var(--worship-bg-color);
+    color: var(--worship-text-color);
+  }
   
   .worship-title {
     font-size: 3.5rem;
@@ -63,7 +68,7 @@
   
   .worship-day p {
     font-size: 1.5rem;
-    color: white;
+    color: black;
     margin: 15px 0;
     font-weight: 500;
   }
@@ -74,7 +79,7 @@
     padding-top: 20px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     font-size: 0.9rem;
-    color: white;
+    color: black;
   }
   
   /* Responsividade */
