--- a/src/components/PastorsSection/style.css
+++ b/src/components/PastorsSection/style.css
@@ -6,7 +6,7 @@
   }
 
   .pastors-section {
-    background-color: var(--pastors-bg-color);
+    background-color: var(--worship-bg-color);
     color: var(--pastors-text-color);
   }
   
