--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 :root {
     /* Cores base */
-    --primary-color: #1a4b8c;
+    --primary-color: #064459;
     --secondary-color: #0d2b4e;
-    --accent-color: #e3b505;
+    --accent-color: #f0891a;
     --light-color: #f8f9fa;
     --dark-color: #212529;
     
@@ -108,8 +108,9 @@ main {
 }
 
 .btn:hover {
-  background: var(--secondary-color);
+  background: white;
   transform: translateY(-3px);
+  color: var(--primary-color);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
