--- a/src/components/HeroSection/style.css
+++ b/src/components/HeroSection/style.css
@@ -4,7 +4,7 @@
   background-position: center;
   background-attachment: fixed;
   color: white;
-  height: 100vh;
+  height: 97vh;
   min-height: 800px;
   display: flex;
   align-items: center;
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, rgba(26, 75, 140, 0.8) 0%, rgba(13, 43, 78, 0.9) 100%);
+  background: linear-gradient(135deg, rgb(0 0 0 / 80%) 0%, rgba(13, 43, 78, 0.9) 100%);
 }
 
 .hero-content {
