integração com api do youtube

--- a/src/components/HelpTheWorkSection/style.css
+++ b/src/components/HelpTheWorkSection/style.css
@@ -9,7 +9,7 @@
   }
 
   .help-section {
-    background-color: var(--help-bg-color);
+    background-color: var(--light-color);
     color: var(--help-text-color);
   }
   
