--- a/src/components/HeroSection/style.css
+++ b/src/components/HeroSection/style.css
@@ -1,5 +1,5 @@
 .hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../../assets/fundopiba.jpg');
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../../assets/testejuvpibaf.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
