--- a/src/components/WorshipTimes/style.css
+++ b/src/components/WorshipTimes/style.css
@@ -5,7 +5,7 @@
   }
 
   .worship-section {
-    background-color: var(--worship-bg-color);
+    background-color: var(--light-color);
     color: var(--worship-text-color);
   }
   
