--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     /* Cores base */
     --primary-color: #064459;
     --secondary-color: #0d2b4e;
-    --accent-color: #f0891a;
+    --accent-color: #f8892f;
     --light-color: #f8f9fa;
     --dark-color: #212529;
     
