--- a/src/components/WorshipTimes/style.css
+++ b/src/components/WorshipTimes/style.css
@@ -1,5 +1,6 @@
 .worship-section {
-  background-color: var(--light-color);
+  /* background-color: var(--light-color); */
+  background: url('../../assets/wave-haikei.svg');
   color: var(--worship-text-color);
   padding: 80px 0;
   position: relative;
@@ -13,7 +14,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none"><path fill="rgba(255,255,255,0.03)" d="M0,0 L100,0 L100,100 Q50,80 0,100 Z"></path></svg>');
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 0;
@@ -29,7 +29,7 @@
 
 .worship-title {
   font-size: 3.5rem;
-  color: var(--primary-color);
+  color: white;
   font-weight: 700;
   line-height: 1;
   margin-bottom: 0;
@@ -180,7 +180,7 @@
 
 .worship-footer p {
   font-size: 1.2rem;
-  color: var(--secondary-color);
+  color: white;
   font-style: italic;
   position: relative;
   display: inline-block;
