--- a/src/components/HelpTheWorkSection/style.css
+++ b/src/components/HelpTheWorkSection/style.css
@@ -13,6 +13,9 @@
     /* background-color: var(--location-bg-color); */
     background: url('../../assets/ondas.svg');
     color: var(--help-text-color);
+    padding: 80px 0;
+    position: relative;
+    overflow: hidden;
   }
   
   .bible-verse-help blockquote {
@@ -39,12 +42,45 @@
     margin: 50px 0;
   }
   
-  .pix-method, .bank-info {
+  .bank-info {
     background: white;
-    padding: 30px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
   }
+  
+  .pix-method {
+    position: relative; /* necessário para o ::after */
+    transition: box-shadow 0.3s ease;
+    background: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  }
+  
+  .pix-method::after {
+    content: '';
+    position: absolute;
+    top: 0; /* agora aparece em cima */
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: var(--primary-color);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+    border-radius: 10px 10px 0 0;
+  }
+
+  .pix-method:hover {
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
+  }
+  
+  
+  .pix-method:hover::after {
+    transform: scaleX(1);
+  }
+  
   
   .pix-method h3, .bank-info h3 {
     color: var(--primary-color);
@@ -81,7 +117,12 @@
     padding: 10px;
     border-radius: 5px;
     word-break: break-all;
+    font-style: italic;
+    font-weight: bold; /* Negrito */
+
   }
+
+  
   
   .pix-instructions {
     font-size: 0.9rem;
@@ -120,6 +161,10 @@
     .bible-verse blockquote {
       font-size: 1.3rem;
       padding: 0 20px;
+    }
+
+    .help-content{
+      max-width: 365px;
     }
   }
   
