cursor pointer no pix

--- a/src/components/HelpTheWorkSection/style.css
+++ b/src/components/HelpTheWorkSection/style.css
@@ -56,6 +56,8 @@
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+    cursor: pointer;
+
   }
   
   .pix-method::after {
@@ -79,6 +81,7 @@
   
   .pix-method:hover::after {
     transform: scaleX(1);
+    
   }
   
   
