adição do avatar genérico

--- a/src/components/PastorsSection/style.css
+++ b/src/components/PastorsSection/style.css
@@ -38,7 +38,9 @@
   margin: 0 auto 25px;
   border: 5px solid var(--light-color);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transform: scale(0.9); /* dá o efeito de zoom out */
 }
+
 
 .pastor-card h3 {
   color: var(--secondary-color);
